--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "sundai"
 version = "0.1.0"
@@ -6,4 +10,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "trl>=0.18.1",
+]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+    "ruff>=0.11.13",
 ]
