simulated streaming-aaahhhhh shit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "accelerate>=1.7.0",
+    "bitsandbytes>=0.46.0",
+    "datasets>=3.6.0",
+    "pandas>=2.3.0",
+    "torch>=2.7.1",
+    "transformers>=4.52.4",
     "trl>=0.18.1",
 ]
 
