--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "sundai"
 version = "0.1.0"
@@ -10,7 +6,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "accelerate>=1.7.0",
-    "bitsandbytes>=0.46.0",
     "datasets>=3.6.0",
     "pandas>=2.3.0",
     "torch>=2.7.1",
@@ -20,6 +15,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "hf-transfer>=0.1.9",
     "pre-commit>=4.2.0",
     "ruff>=0.11.13",
 ]
