--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "accelerate>=1.7.0",
     "datasets>=3.6.0",
+    "flask>=3.1.1",
     "pandas>=2.3.0",
     "torch>=2.7.1",
     "transformers>=4.52.4",
